--- a/index.html
+++ b/index.html
@@ -85,7 +85,17 @@
                 </div>
             </nav>
             <main class="hotel-view">
-                Hotel view
+                <div class="gallery">
+                    <figure class="gallery__item">
+                        <img src="img/hotel-1.jpg" alt="Photo of horel 1" class="gallery__photo">
+                    </figure>
+                    <figure class="gallery__item">
+                        <img src="img/hotel-2.jpg" alt="Photo of horel 2" class="gallery__photo">
+                    </figure>
+                    <figure class="gallery__item">
+                        <img src="img/hotel-3.jpg" alt="Photo of horel 3" class="gallery__photo">
+                    </figure>
+                </div>
             </main>
         </div>
     </div>
