--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
                 </div>
                 <div class="detail">
                     <div class="description">
-                        <p class="pargraph">
+                        <p class="paragraph">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi nisi dignissimos debitis ratione sapiente saepe. Accusantium cumque, quas, ut corporis incidunt deserunt quae architecto voluptate.
                         </p>
-                        <p class="pargraph">
+                        <p class="paragraph">
                             Accusantium cumque, quas, ut corporis incidunt deserunt quae architecto voluptate delectus, inventore iure aliquid aliquam.
                         </p>
                         <ul class="list">
@@ -149,7 +149,7 @@
                                 Free airport shuttle
                             </li>
                             <li class="list__item">
-                                Fre wifi in all rooms
+                                Free wifi in all rooms
                             </li>
                             <li class="list__item">
                                 Air conditioning and heating
@@ -176,9 +176,36 @@
                             </div>
                         </div>
                     </div>
-                    <div class="user-reviews">
-                        User reviews
-                    </div>
+                    <figure class="user-reviews">
+                        <figure class="review">
+                            <blockquote class="review__text">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloremque architecto dicta animi, totam, itaque officia ex.
+                            </blockquote>
+                            <figcaption class="review__user">
+                                <img src="img/user-1.jpg" alt="User 1" class="review__photo">
+                                <div class="review__user-box">
+                                    <p class="review__user-name">Nick Smith</p>
+                                    <p class="review__user-date">Feb 23rd, 2017</p>
+                                </div>
+                                <div class="review__rating">7.8</div>
+
+                            </figcaption>
+                        </figure>
+                        <figure class="review">
+                            <blockquote class="review__text">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloremque architecto dicta animi.
+                            </blockquote>
+                            <figcaption class="review__user">
+                                <img src="img/user-2.jpg" alt="User 1" class="review__photo">
+                                <div class="review__user-box">
+                                    <p class="review__user-name">John Doe</p>
+                                    <p class="review__user-date">Sep 13th, 2017</p>
+                                </div>
+                                <div class="review__rating">8.8</div>
+                            </figcaption>
+                        </figure>
+                        <button class="btn-inline">Show all <span>&rarr;</span></button>
+                    </figure>
                 </div>
             </main>
         </div>
